# clang_parser

./: .gitignore  CMakeLists.txt  README.md  clang_parser.cpp  clang_parser.hpp  clang_parser.sh  interface_data.hpp  interface_description.hpp  main.cpp  simple_class_declaration.hpp  simple_class_template.hpp
